--- a/static/css/style.css
+++ b/static/css/style.css
@@ -358,6 +358,19 @@ span {
     color: #ccc;
 }
 
+/* Error msg when commenting */
+.alert-container {
+    margin-top: 20px;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+.alert {
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 5px;
+}
+
 /* Feedback Items */
 .feedback-item {
     background-color: #444;
