--- a/templates/base.html
+++ b/templates/base.html
@@ -66,7 +66,8 @@
                                 href="{% url 'trainers:trainers' %}"><span>Trainers</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if request.path == '/about/' %}active{% endif %}" href="#">About</a>
+                            <a class="nav-link {% if request.path == '/about/' %}active{% endif %}"
+                                href="{% url 'about:about' %}">About</a>
                         </li>
 
                         {% if user.is_authenticated %}
