--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,8 @@
 
                 <!-- Navbar Links (Centering) -->
                 <div class="collapse navbar-collapse justify-content-center" id="navbar-nav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav mx-auto">
+                        <!-- mx-auto for centering -->
                         <!-- Show 'Home' link only when user is NOT authenticated -->
                         {% if not user.is_authenticated %}
                         <li class="nav-item">
@@ -87,10 +88,11 @@
                         {% endif %}
                     </ul>
                 </div>
-
             </div>
         </nav>
     </header>
+
+
 
     <main>
         {% block content %}
