--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,32 +1,46 @@
-{% extends "account/base_entrance.html" %}
+{% extends "base.html" %}
 {% load i18n allauth account %}
 {% block head_title %}
-    {% trans "Password Reset" %}
+{% trans "Password Reset" %}
 {% endblock head_title %}
+
 {% block content %}
-    {% element h1 %}
-        {% trans "Password Reset" %}
-    {% endelement %}
+<div class="password-reset-wrapper">
+    <h1 class="password-reset-title">{% trans "Password Reset" %}</h1>
+
     {% if user.is_authenticated %}
-        {% include "account/snippets/already_logged_in.html" %}
+    {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    {% element p %}
+
+    <p class="password-reset-description">
         {% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}
-    {% endelement %}
+    </p>
+
     {% url 'account_reset_password' as reset_url %}
-    {% element form form=form method="post" action=reset_url %}
-        {% slot body %}
-            {% csrf_token %}
-            {% element fields form=form %}
-            {% endelement %}
-        {% endslot %}
-        {% slot actions %}
-            {% element button type="submit" %}
+    <form method="post" action="{{ reset_url }}" class="password-reset-form">
+        {% csrf_token %}
+        <div class="form-field">
+            {% for field in form %}
+            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+            {{ field }}
+            {% if field.errors %}
+            <ul class="error-list">
+                {% for error in field.errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            {% endfor %}
+        </div>
+        <div class="form-submit">
+            <button type="submit" class="reset-btn">
                 {% trans 'Reset My Password' %}
-            {% endelement %}
-        {% endslot %}
-    {% endelement %}
-    {% element p %}
+            </button>
+        </div>
+    </form>
+
+    <p class="password-reset-help">
         {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
-    {% endelement %}
+    </p>
+</div>
 {% endblock content %}
