Make social links accessible

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,21 +107,28 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-auto social-icons">
+                    <!-- Facebook Link -->
                     <a href="{{ social_links.facebook }}" target="_blank" class="text-decoration-none"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-facebook"></i>
+                        rel="noopener noreferrer" aria-label="Follow us on Facebook">
+                        <i class="fab fa-facebook" aria-hidden="true"></i>
                     </a>
+
+                    <!-- Twitter Link -->
                     <a href="{{ social_links.twitter }}" target="_blank" class="text-decoration-none"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-twitter social"></i>
+                        rel="noopener noreferrer" aria-label="Follow us on Twitter">
+                        <i class="fab fa-twitter social" aria-hidden="true"></i>
                     </a>
+
+                    <!-- Instagram Link -->
                     <a href="{{ social_links.instagram }}" target="_blank" class="text-decoration-none"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-instagram"></i>
+                        rel="noopener noreferrer" aria-label="Follow us on Instagram">
+                        <i class="fab fa-instagram" aria-hidden="true"></i>
                     </a>
+
+                    <!-- LinkedIn Link -->
                     <a href="{{ social_links.linkedin }}" target="_blank" class="text-decoration-none"
-                        rel="noopener noreferrer">
-                        <i class="fab fa-linkedin social"></i>
+                        rel="noopener noreferrer" aria-label="Follow us on LinkedIn">
+                        <i class="fab fa-linkedin social" aria-hidden="true"></i>
                     </a>
                 </div>
             </div>
