--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -31,4 +31,6 @@
             {% trans "Welcome back to Fitsphere! To leave feedback on our trainers, proceed to log in here. If you do not have an account yet" %}
             <a href="{% url 'account_signup' %}"><br>{% trans "Sign up here" %}</a>
         </p>
-        {% endblock %}
+    </div> <!-- Closing auth-box div -->
+</div> <!-- Closing auth-container div -->
+{% endblock %}
